--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -124,9 +124,11 @@
   }
 }
 
-.custom-scrollbar {
-  scrollbar-color: var(--color-scrollbar) transparent;
-  scrollbar-width: thin;
+@media (min-width: 1024px) {
+  .custom-scrollbar {
+    scrollbar-color: var(--color-scrollbar) transparent;
+    scrollbar-width: thin;
+  }
 }
 
 .cards-2-grid {
